# nxn-cube-optimization

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  ROADMAP.md
.github/workflows/: ci.yml
app/: main.cpp
benchmarks/: BASELINE.md  CMakeLists.txt  cube_bench.cpp  solve_bench.cpp
bindings/: CMakeLists.txt  nxn_cube_py.cpp  test_bindings.py
loadtest/: run_local.sh  scrambles.js  solve_load.js
service/: app.py  pyproject.toml
service/tests/: test_app.py
src/cube/: cube.cpp  cube.h  notation.cpp  notation.h  scramble.cpp  scramble.h
src/cube_nxn/: cube_nxn.cpp  cube_nxn.h  reduction_general.cpp  reduction_general.h
src/solver/: coords.cpp  coords.h  ida.cpp  ida.h  move_tables.cpp  move_tables.h  pruning.cpp  pruning.h  symmetry.cpp  symmetry.h
tests/: CMakeLists.txt  coords_test.cpp  cube_nxn_test.cpp  cube_test.cpp  cube_test_helpers.h  ida_parallel_test.cpp  ida_test.cpp  ida_thread_safety_test.cpp  move_tables_test.cpp  pruning_test.cpp  scramble_test.cpp  sym_pruning_test.cpp  symmetry_test.cpp
tools/: profile_solve.cpp  reduce_centers_demo.cpp
web/: .env.development  package-lock.json  package.json
web/src/: App.tsx  Cube.tsx  api.ts  cubeState.ts  main.tsx  styles.css
